Fix deprecations.